tests/integration/lsp/text_document/snapshots/integration__lsp__text_document__completion__entry_type_at_empty.snap
---
source: tests/integration/lsp/text_document/completion.rs
assertion_line: 514
expression: "complete(r#\"\n%BIB main.bib\n%SRC @\n%CUR  ^\"#)?"
---
[
  {
    "data": "[data]",
    "documentation": "[documentation]",
    "kind": 1,
    "label": "article",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "article"
    }
  },
  {
    "data": "[data]",
    "documentation": "[documentation]",
    "kind": 1,
    "label": "artwork",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "artwork"
    }
  },
  {
    "data": "[data]",
    "documentation": "[documentation]",
    "kind": 1,
    "label": "audio",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "audio"
    }
  },
  {
    "data": "[data]",
    "documentation": "[documentation]",
    "kind": 1,
    "label": "bibnote",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "bibnote"
    }
  },
  {
    "data": "[data]",
    "documentation": "[documentation]",
    "kind": 1,
    "label": "book",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "book"
    }
  }
]
