tests/integration/lsp/text_document/snapshots/integration__lsp__text_document__completion__field_empty_entry_open.snap
---
source: tests/integration/lsp/text_document/completion.rs
expression: "complete(r#\"\n%BIB main.bib\n%SRC @article{foo,\n%CUR              ^\"#)?"
---
[
  {
    "documentation": "[documentation]",
    "kind": 1,
    "label": "abstract",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "abstract"
    }
  },
  {
    "documentation": "[documentation]",
    "kind": 1,
    "label": "addendum",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "addendum"
    }
  },
  {
    "documentation": "[documentation]",
    "kind": 1,
    "label": "address",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "address"
    }
  },
  {
    "documentation": "[documentation]",
    "kind": 1,
    "label": "afterword",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "afterword"
    }
  },
  {
    "documentation": "[documentation]",
    "kind": 1,
    "label": "annotation",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "annotation"
    }
  }
]
